--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 	<ul>
 		<li><a href="remix.html">Remix</a></li>
 		<li><a href="glitch.html">Glitch</a></li>
-		<li><a href="video.html">Video</a></li> 
+		<li><a href="video.html">Video</a></li>
+		<li><a href="processing.html">Processing</a></li>
+		<li><a href="net art.html">Net Art</a></li>
+		<li><a href="final projects.html">Final Projects</a></li>    
 	</ul>
 
 	<h1 class="colorchange">Hi, I'm Holly</h1>
