--- a/video.html
+++ b/video.html
@@ -5,9 +5,14 @@
 </head>
 <body>
 	<ul>
-		<li><a href="index.html">Home</a></li>
+		<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/solid.js" integrity="sha384-+Ga2s7YBbhOD6nie0DzrZpJes+b2K1xkpKxTFFcx59QmVPaSA8c7pycsNaFwUK6l" crossorigin="anonymous"></script>
+		<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/fontawesome.js" integrity="sha384-7ox8Q2yzO/uWircfojVuCQOZl+ZZBg2D2J5nkpLqzH1HY0C1dHlTKIbpRz/LG23c" crossorigin="anonymous"></script>
+		<li><a href="index.html"><i class="fas fa-home"></i>
 		<li><a href="remix.html">Remix</a></li>
-		<li><a href="glitch.html">Glitch</a></li> 
+		<li><a href="glitch.html">Glitch</a></li>
+		<li><a href="processing.html">Processing</a></li>
+		<li><a href="net art.html">Net Art</a></li>
+		<li><a href="final projects.html">Final Projects</a></li>   
 	</ul>
 	<h1>Video</h1>
 	
