--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
 	<h2 class="colorchange">This my portflio</h2>
 
 	<a href="https://sjsu.instructure.com/cosurses/1259438/modules">Link</a>
-	<a href="page1.html">page 2</a>
-</body>
+	<a href="page1.html">page 2</
+	</body>
 </html>
