--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US"> 
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <head>
 	<title>Holly</title>
+	<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/solid.js" integrity="sha384-+Ga2s7YBbhOD6nie0DzrZpJes+b2K1xkpKxTFFcx59QmVPaSA8c7pycsNaFwUK6l" crossorigin="anonymous"></script>
+	<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/fontawesome.js" integrity="sha384-7ox8Q2yzO/uWircfojVuCQOZl+ZZBg2D2J5nkpLqzH1HY0C1dHlTKIbpRz/LG23c" crossorigin="anonymous"></script>
 	<link rel="stylesheet" type="text/css" href="css/mystyle.css">
-	<link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
+	<meta name="author" content="Holly Hancock">
 
 </head>
-<body>
-	<div><img src="https://d30y9cdsu7xlg0.cloudfront.net/png/753158-200.png" id="logo"></div>
-	<i class="far fa-smile"></i>
+<body> 
+	<!--  Just for reference 
+		div><img src="https://d30y9cdsu7xlg0.cloudfront.net/png/753158-200.png" id="logo"></div>
+	<i class="far fa-smile"></i>-->
+
 	<ul>
+		<li><a class="active" href="index.html"><i class="fas fa-home"></i></a></li>  
 		<li><a href="remix.html">Remix</a></li>
 		<li><a href="glitch.html">Glitch</a></li>
 		<li><a href="video.html">Video</a></li>
@@ -22,7 +28,8 @@
 
 	<h2 class="colorchange">This my portflio</h2>
 
-	<a href="https://sjsu.instructure.com/cosurses/1259438/modules">Link</a>
-	<a href="page1.html">page 2</
+	<!-- Just for reference 
+	a href="https://sjsu.instructure.com/cosurses/1259438/modules">Link</a>
+	<a href="page1.html">page 2</-->
 	</body>
 </html>
