--- a/remix.html
+++ b/remix.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US"> 
 <head>
-	<title></title>
+	<link rel="stylesheet" href="css/mystyle.css">
+	<title>Remix</title>
 	<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/solid.js" integrity="sha384-+Ga2s7YBbhOD6nie0DzrZpJes+b2K1xkpKxTFFcx59QmVPaSA8c7pycsNaFwUK6l" crossorigin="anonymous"></script>
 <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/fontawesome.js" integrity="sha384-7ox8Q2yzO/uWircfojVuCQOZl+ZZBg2D2J5nkpLqzH1HY0C1dHlTKIbpRz/LG23c" crossorigin="anonymous"></script>
+<meta name="author" content="Holly Hancock"> 
 </head>
 <body>
 	<ul>
 		<li><a href="index.html"><i class="fas fa-home"></i></a></li>
+		<li><a class="active" href="remix.html">Remix</a></li>
 		<li><a href="glitch.html">Glitch</a></li>
 		<li><a href="video.html">Video</a></li>
 		<li><a href="processing.html">Processing</a></li>
@@ -17,7 +20,7 @@
 	<h1>Remix</h1>
 	
 	<h2>This is an image</h2>
-	<img src="images/remix.jpg" alt="remix image" style="width:1200px;height:790px;"> 
+	<img src="images/remix.jpg" alt="remix image"> 
 
 </body>
 </html>
