--- a/glitch.html
+++ b/glitch.html
@@ -1,24 +1,35 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US"> 
 <head>
+	<link rel="stylesheet" href="css/mystyle.css">
 	<title>Glitch</title>
 	<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/solid.js" integrity="sha384-+Ga2s7YBbhOD6nie0DzrZpJes+b2K1xkpKxTFFcx59QmVPaSA8c7pycsNaFwUK6l" crossorigin="anonymous"></script>
 	<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/fontawesome.js" integrity="sha384-7ox8Q2yzO/uWircfojVuCQOZl+ZZBg2D2J5nkpLqzH1HY0C1dHlTKIbpRz/LG23c" crossorigin="anonymous"></script>
+	<meta name="author" content="Holly Hancock">
 </head>
-<body>
+<body> 
+ 
 	<ul>
 		<li><a href="index.html"><i class="fas fa-home"></i>
 		<li><a href="remix.html">Remix</a></li>
+		<li><a class="active" href="glitch.html">Glitch</a></li>
 		<li><a href="video.html">Video</a></li>
 		<li><a href="processing.html">Processing</a></li>
 		<li><a href="net art.html">Net Art</a></li>  
 		<li><a href="final projects.html">Final Projects</a></li>  
 	</ul>
-	<h1>Glitch</h1>
-	
-	<img src="media/glitch.gif" alt="glitch gif" style="width:700px;height:570px;"> 
+	<h1>Glitch</h1> 
+
+	<img src="/media/glitch.gif" alt="glitch gif"> 
 
 	<p>This some description about my work.</p>
+
+	<h2>asdads</h2
+
+	< img src="images/glitch.jpg"> 
+	
+	<h3>asdf</h3
+	< img src="/images/glitch2.jpg" alt="glitch image 2">
 	
 </body>
 </html>
