--- a/video.html
+++ b/video.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US"> 
 <head>
+	<link rel="stylesheet" href="css/mystyle.css">
 	<title>Video</title>
+	<meta name="author" content="Holly Hancock">
 </head>
 <body>
 	<ul>
@@ -10,6 +12,7 @@
 		<li><a href="index.html"><i class="fas fa-home"></i>
 		<li><a href="remix.html">Remix</a></li>
 		<li><a href="glitch.html">Glitch</a></li>
+		<li><a class="active" href="video.html">Video</a></li>
 		<li><a href="processing.html">Processing</a></li>
 		<li><a href="net art.html">Net Art</a></li>
 		<li><a href="final projects.html">Final Projects</a></li>   
