new and improved

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<!--  Just for reference 
 		div><img src="https://d30y9cdsu7xlg0.cloudfront.net/png/753158-200.png" id="logo"></div>
 	<i class="far fa-smile"></i>-->
-
+<div>
 	<ul>
 		<li><a class="active" href="index.html"><i class="fas fa-home"></i></a></li>  
 		<li><a href="remix.html">Remix</a></li>
@@ -23,6 +23,7 @@
 		<li><a href="net art.html">Net Art</a></li>
 		<li><a href="final projects.html">Final Projects</a></li>    
 	</ul>
+</div>
 
 	<h1 class="colorchange">Hi, I'm Holly</h1>
 
