--- a/remix.html
+++ b/remix.html
@@ -8,6 +8,7 @@
 <meta name="author" content="Holly Hancock"> 
 </head>
 <body>
+	<div>
 	<ul>
 		<li><a href="index.html"><i class="fas fa-home"></i></a></li>
 		<li><a class="active" href="remix.html">Remix</a></li>
@@ -17,6 +18,7 @@
 		<li><a href="net art.html">Net Art</a></li>
 		<li><a href="final projects.html">Final Projects</a></li>   
 	</ul>
+	</div>
 	<h1>Remix</h1>
 	
 	<h2>This is an image</h2>
