--- a/final projects.html
+++ b/final projects.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
 <head>
-	<title></title>
+	<link rel="stylesheet" href="css/mystyle.css">
+	<title>Final Projects</title>
 	<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/solid.js" integrity="sha384-+Ga2s7YBbhOD6nie0DzrZpJes+b2K1xkpKxTFFcx59QmVPaSA8c7pycsNaFwUK6l" crossorigin="anonymous"></script>
 	<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/fontawesome.js" integrity="sha384-7ox8Q2yzO/uWircfojVuCQOZl+ZZBg2D2J5nkpLqzH1HY0C1dHlTKIbpRz/LG23c" crossorigin="anonymous"></script>
+	<meta name="author" content="Holly Hancock">
 </head>
 <body>
 	<ul>
@@ -11,8 +13,9 @@
 		<li><a href="remix.html">Remix</a></li>  
 		<li><a href="glitch.html">Glitch</a></li>
 		<li><a href="video.html">Video</a></li>
+		<li><a href="processing.html">Processing</a></li>
 		<li><a href="net art.html">Net Art</a></li>
-		<li><a href="final projects.html">Final Projects</a></li>   
+		<li><a class="active" href="final projects.html">Final Projects</a></li>   
 	</ul>
 	<h1>Final Projects</h1>
 
