--- a/glitch.html
+++ b/glitch.html
@@ -20,13 +20,16 @@
 	</ul>
 	<h1>Glitch</h1> 
 
-	<img src="/media/glitch.gif" alt="glitch gif"> 
+	<img src="media/glitch.gif" alt="glitch gif"> 
 
 	<p>This some description about my work.</p>
 
-	<h2>asdads</h2
+	<h2>asdads</h2>
 
-	< img src="images/glitch.jpg"> 
+	<img src="images/glitch.jpg">
+	<img src="images/glitch2.jpg">
+	<img src="images/glitch3.jpg">
+	<img src="images/glitch4.jpg"> 
 	
 	<h3>asdf</h3
 	< img src="/images/glitch2.jpg" alt="glitch image 2">
