--- a/net art2.html
+++ b/net art2.html
@@ -5,7 +5,7 @@
 	<meta name="author" content="Holly Hancock"> 
 </head>
 <body>
-	<iframe width="1000" height="500" src="https://www.youtube.com/embed/CX0Vm-Yno4Y?controls=0autoplay=0" allowfullscreen align="middle">
+	<iframe width="1000" height="500" src="https://www.youtube.com/embed/CX0Vm-Yno4Y?autoplay=1" allowfullscreen align="middle">
 		</iframe>
 	<h1>
 	 
