--- a/processing.html
+++ b/processing.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
 <head>
-	<title></title>
+	<link rel="stylesheet" href="css/mystyle.css"> 
+	<title>Processing</title>
+	<meta name="author" content="Holly Hancock"> 
 	<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/solid.js" integrity="sha384-+Ga2s7YBbhOD6nie0DzrZpJes+b2K1xkpKxTFFcx59QmVPaSA8c7pycsNaFwUK6l" crossorigin="anonymous"></script>
 	<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/fontawesome.js" integrity="sha384-7ox8Q2yzO/uWircfojVuCQOZl+ZZBg2D2J5nkpLqzH1HY0C1dHlTKIbpRz/LG23c" crossorigin="anonymous"></script>
 </head>
@@ -11,6 +13,7 @@
 		<li><a href="remix.html">Remix</a></li>  
 		<li><a href="glitch.html">Glitch</a></li>
 		<li><a href="video.html">Video</a></li>
+		<li><a class="active" href="processing.html">Processing</a></li>
 		<li><a href="net art.html">Net Art</a></li>
 		<li><a href="final projects.html">Final Projects</a></li>   
 	</ul>
