--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US"> 
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <head>
-	<title>Holly</title>
+	<title>Holly | Portfolio</title>
 	<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/solid.js" integrity="sha384-+Ga2s7YBbhOD6nie0DzrZpJes+b2K1xkpKxTFFcx59QmVPaSA8c7pycsNaFwUK6l" crossorigin="anonymous"></script>
 	<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/fontawesome.js" integrity="sha384-7ox8Q2yzO/uWircfojVuCQOZl+ZZBg2D2J5nkpLqzH1HY0C1dHlTKIbpRz/LG23c" crossorigin="anonymous"></script>
 	<link rel="stylesheet" type="text/css" href="css/mystyle.css">
@@ -21,7 +21,7 @@
 		<li><a href="video.html">Video</a></li>
 		<li><a href="processing.html">Processing</a></li>
 		<li><a href="net art.html">Net Art</a></li>
-		<li><a href="final projects.html">Final Projects</a></li>    
+		<li><a href="sketch.html">Sketch</a></li>    
 	</ul>
 </div>
 
@@ -32,5 +32,6 @@
 	<!-- Just for reference 
 	a href="https://sjsu.instructure.com/cosurses/1259438/modules">Link</a>
 	<a href="page1.html">page 2</-->
+	<iframe src="sketch.html"></iframe>
 	</body>
 </html>
