--- a/remix.html
+++ b/remix.html
@@ -16,7 +16,7 @@
 		<li><a href="video.html">Video</a></li>
 		<li><a href="processing.html">Processing</a></li>
 		<li><a href="net art.html">Net Art</a></li>
-		<li><a href="final projects.html">Final Projects</a></li>   
+		<li><a href="sketch.html">Final Projects</a></li>   
 	</ul>
 	</div>
 	<h1>Remix</h1>
