--- a/processing.html
+++ b/processing.html
@@ -15,7 +15,7 @@
 		<li><a href="video.html">Video</a></li>
 		<li><a class="active" href="processing.html">Processing</a></li>
 		<li><a href="net art.html">Net Art</a></li>
-		<li><a href="final projects.html">Final Projects</a></li>   
+		<li><a href="sketch.html">Final Projects</a></li>   
 	</ul>
 	<h1>Processing</h1>
 
