--- a/video.html
+++ b/video.html
@@ -15,7 +15,7 @@
 		<li><a class="active" href="video.html">Video</a></li>
 		<li><a href="processing.html">Processing</a></li>
 		<li><a href="net art.html">Net Art</a></li>
-		<li><a href="final projects.html">Final Projects</a></li>   
+		<li><a href="sketch.html">Final Projects</a></li>   
 	</ul>
 	<h1>Video</h1>
 	
