--- a/glitch.html
+++ b/glitch.html
@@ -9,6 +9,7 @@
 </head>
 <body> 
  
+ <div>
 	<ul>
 		<li><a href="index.html"><i class="fas fa-home"></i>
 		<li><a href="remix.html">Remix</a></li>
@@ -16,8 +17,9 @@
 		<li><a href="video.html">Video</a></li>
 		<li><a href="processing.html">Processing</a></li>
 		<li><a href="net art.html">Net Art</a></li>  
-		<li><a href="sketch.html">Final Projects</a></li>  
 	</ul>
+	 </div>
+	 
 	<h1>Glitch</h1> 
 
 	<img src="media/glitch.gif" alt="glitch gif"> 
