--- a/processing.html
+++ b/processing.html
@@ -8,15 +8,18 @@
 	<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/fontawesome.js" integrity="sha384-7ox8Q2yzO/uWircfojVuCQOZl+ZZBg2D2J5nkpLqzH1HY0C1dHlTKIbpRz/LG23c" crossorigin="anonymous"></script>
 </head>
 <body>
+	
+	<div>
 	<ul>
 		<li><a href="index.html"><i class="fas fa-home"></i></a></li>
 		<li><a href="remix.html">Remix</a></li>  
 		<li><a href="glitch.html">Glitch</a></li>
 		<li><a href="video.html">Video</a></li>
 		<li><a class="active" href="processing.html">Processing</a></li>
-		<li><a href="net art.html">Net Art</a></li>
-		<li><a href="sketch.html">Final Projects</a></li>   
+		<li><a href="net art.html">Net Art</a></li>  
 	</ul>
+	</div>
+
 	<h1>Processing</h1>
 
 </body>
