--- a/video.html
+++ b/video.html
@@ -6,6 +6,8 @@
 	<meta name="author" content="Holly Hancock">
 </head>
 <body>
+	
+	<div>
 	<ul>
 		<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/solid.js" integrity="sha384-+Ga2s7YBbhOD6nie0DzrZpJes+b2K1xkpKxTFFcx59QmVPaSA8c7pycsNaFwUK6l" crossorigin="anonymous"></script>
 		<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/fontawesome.js" integrity="sha384-7ox8Q2yzO/uWircfojVuCQOZl+ZZBg2D2J5nkpLqzH1HY0C1dHlTKIbpRz/LG23c" crossorigin="anonymous"></script>
@@ -14,9 +16,10 @@
 		<li><a href="glitch.html">Glitch</a></li>
 		<li><a class="active" href="video.html">Video</a></li>
 		<li><a href="processing.html">Processing</a></li>
-		<li><a href="net art.html">Net Art</a></li>
-		<li><a href="sketch.html">Final Projects</a></li>   
+		<li><a href="net art.html">Net Art</a></li>   
 	</ul>
+	</div>
+
 	<h1>Video</h1>
 	
 	<h2>
