--- a/processing.html
+++ b/processing.html
@@ -15,7 +15,7 @@
 		<li><a href="remix.html">Remix</a></li>  
 		<li><a href="glitch.html">Glitch</a></li>
 		<li><a href="video.html">Video</a></li>
-		<li><a class="active" href="processing.html">Processing</a></li>
+		<li><a class="active" href="processingindex.html">Processing</a></li>
 		<li><a href="net art.html">Net Art</a></li>  
 	</ul>
 	</div>
