--- a/glitch.html
+++ b/glitch.html
@@ -22,19 +22,20 @@
 	 
 	<h1>Glitch</h1> 
 
-	<img src="media/glitch.gif" alt="glitch gif"> 
+	<img class="center" src="media/glitch.gif" alt="glitch gif"> 
 
 	<p>This some description about my work.</p>
 
 	<h2>asdads</h2>
 
-	<img src="images/glitch.jpg">
-	<img src="images/glitch2.jpg">
-	<img src="images/glitch3.jpg">
-	<img src="images/glitch4.jpg"> 
+	<img class="center" src="images/glitch.jpg">
+	<img class="center" src="images/glitch2.jpg">
+	<img class="center" src="images/glitch3.jpg">
+	<img class="center" src="images/glitch4.jpg"> 
 	
 	<h3>asdf</h3
-	< img src="/images/glitch2.jpg" alt="glitch image 2">
+	
+	<img src="/images/glitch2.jpg" alt="glitch image 2">
 	
 </body>
 </html>
