--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	</ul>
 </div>
 
-	<h1 class="colorchange">Hi, I'm Holly</h1>
+	<h1 id="indexheader">Hi, I'm Holly</h1>
 
 	<h2 class="colorchange">This my portflio</h2>
 
