--- a/video.html
+++ b/video.html
@@ -23,8 +23,8 @@
 	<h1>Video</h1>
 	
 	<h2>
-		<iframe src="https://player.vimeo.com/video/258787860" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-<p><a href="https://vimeo.com/258787860">Unconditionally</a> from <a href="https://vimeo.com/user81094981">Holly Hancock</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+		<iframe src="https://player.vimeo.com/video/258787860" width="100%" height="100%" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+
 	</h2>
 	
 </body>
