--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="en-US"> 
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+
 <head>
+	<meta charset="utf-8">
+	<meta name="author" content="Holly Hancock">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 	<title>Holly | Portfolio</title>
 	<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/solid.js" integrity="sha384-+Ga2s7YBbhOD6nie0DzrZpJes+b2K1xkpKxTFFcx59QmVPaSA8c7pycsNaFwUK6l" crossorigin="anonymous"></script>
 	<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/fontawesome.js" integrity="sha384-7ox8Q2yzO/uWircfojVuCQOZl+ZZBg2D2J5nkpLqzH1HY0C1dHlTKIbpRz/LG23c" crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 	<link rel="stylesheet" type="text/css" href="css/mystyle.css">
-	<meta name="author" content="Holly Hancock">
-
 </head>
+
 <body> 
-	<!--  Just for reference 
-		div><img src="https://d30y9cdsu7xlg0.cloudfront.net/png/753158-200.png" id="logo"></div>
-	<i class="far fa-smile"></i>-->
+	
 <div>
 	<ul>
 		<li><a class="active" href="index.html"><i class="fas fa-home"></i></a></li>  
@@ -30,8 +31,6 @@
 
 	<!-- Just for reference 
 	a href="https://sjsu.instructure.com/cosurses/1259438/modules">Link</a>
-	<a href="page1.html">page 2</-->
-		
-	<iframe src="sketch.html"></iframe> 
+	<a href="page1.html">page 2</--> 
 	</body>
 </html>
