--- a/remix.html
+++ b/remix.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en-US"> 
 <head>
+	<meta charset="utf-8">
+	<meta name="author" content="Holly Hancock">
 	<link rel="stylesheet" href="css/mystyle.css">
 	<title>Remix</title>
 	<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/solid.js" integrity="sha384-+Ga2s7YBbhOD6nie0DzrZpJes+b2K1xkpKxTFFcx59QmVPaSA8c7pycsNaFwUK6l" crossorigin="anonymous"></script>
 <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/fontawesome.js" integrity="sha384-7ox8Q2yzO/uWircfojVuCQOZl+ZZBg2D2J5nkpLqzH1HY0C1dHlTKIbpRz/LG23c" crossorigin="anonymous"></script>
-<meta name="author" content="Holly Hancock"> 
+ 
 </head>
 <body>
 	<div>
@@ -20,8 +22,14 @@
 	</div>
 	
 	<h1>Remix</h1>
-	
-	<h2>This is an image</h2>
-	<img src="images/remix.jpg" alt="remix image"> 
+
+	<p>
+		<img src="images/remix.jpg" alt="remix image" class="remiximage"> 
+	</p>
+
+	<p class="remixdescription">
+		Most of us are aware of how addicting our phones are, yet we still continue to disconnect the world around us. Sometimes we trap our selfs in a current till we're swept away.
+	</p>
+
 </body>
 </html>
