--- a/video.html
+++ b/video.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en-US"> 
 <head>
+	<meta charset="utf-8">
+	<meta name="author" content="Holly Hancock">
 	<link rel="stylesheet" href="css/mystyle.css">
 	<title>Video</title>
 	<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/solid.js" integrity="sha384-+Ga2s7YBbhOD6nie0DzrZpJes+b2K1xkpKxTFFcx59QmVPaSA8c7pycsNaFwUK6l" crossorigin="anonymous"></script>
 		<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/fontawesome.js" integrity="sha384-7ox8Q2yzO/uWircfojVuCQOZl+ZZBg2D2J5nkpLqzH1HY0C1dHlTKIbpRz/LG23c" crossorigin="anonymous"></script>
-	<meta name="author" content="Holly Hancock">
+	
 </head>
 <body>
 	
@@ -22,10 +24,7 @@
 
 	<h1>Video</h1>
 	
-	<h2>
-		<iframe src="https://player.vimeo.com/video/258787860" width="100%" height="100%" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-
-	</h2>
+	<iframe src="https://player.vimeo.com/video/258787860" style="max-height: 100%" "max-width: 100%" width="600" height="800" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 	
 </body>
 </html>
