FINALLY DONE (sorta)
still have a few techincial issues but yeah

--- a/index.html
+++ b/index.html
@@ -1,36 +1,41 @@
 <!DOCTYPE html>
 <html lang="en-US"> 
-
 <head>
 	<meta charset="utf-8">
 	<meta name="author" content="Holly Hancock">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-	<title>Holly | Portfolio</title>
-	<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/solid.js" integrity="sha384-+Ga2s7YBbhOD6nie0DzrZpJes+b2K1xkpKxTFFcx59QmVPaSA8c7pycsNaFwUK6l" crossorigin="anonymous"></script>
-	<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/fontawesome.js" integrity="sha384-7ox8Q2yzO/uWircfojVuCQOZl+ZZBg2D2J5nkpLqzH1HY0C1dHlTKIbpRz/LG23c" crossorigin="anonymous"></script>
-	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-	<link rel="stylesheet" type="text/css" href="css/mystyle.css">
+		<title>Holly | Portfolio</title>
+			<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/solid.js" integrity="sha384-+Ga2s7YBbhOD6nie0DzrZpJes+b2K1xkpKxTFFcx59QmVPaSA8c7pycsNaFwUK6l" crossorigin="anonymous"></script>
+			<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/fontawesome.js" integrity="sha384-7ox8Q2yzO/uWircfojVuCQOZl+ZZBg2D2J5nkpLqzH1HY0C1dHlTKIbpRz/LG23c" crossorigin="anonymous"></script>
+				<link rel="stylesheet" type="text/css" href="https://www.w3schools.com/w3css/4/w3.css">
+				<link rel="stylesheet" type="text/css" href="css/mystyle.css">
 </head>
-
 <body> 
+	<nav>
+		<ul>
+			<li><a class="active" href="index.html"><i class="fas fa-home"></i></a></li>  
+			<li><a href="remix.html">Remix</a></li>
+			<li><a href="glitch.html">Glitch</a></li>
+			<li><a href="video.html">Video</a></li>
+			<li><a href="processing.html">Processing</a></li>
+			<li><a href="net art.html">Net Art</a></li>    
+		</ul>
+</nav>
+
+	<div id="main">
+		<h1 id="maintitle">Hi, I'm Holly</h1>
+
+		<p class="statementDescription">
+			FIANLLY DONE WITH MY PORTFOLIO WEBSITE *heck yeah I procrastinated*
+			Ok so I'm not entirely "done" with it, still have a few techincal aspects that I just couldn't figure out. Seeing how I literally spent all day on this and how I have another final later today, that I of course haven't reviewed for yet, I'm gonna leave this site super basic. My Processing portrait reflects how I feel right now sooo yeah..... 
+
+			Oh yeah and here's my other website with that looks more appealing since I didn't code it.
+		</p>
+
+<br>
+	<a target="_blank" href="https://hollyhancock.myportfolio.com/">PhotographyWebsite</a>
 	
-<div>
-	<ul>
-		<li><a class="active" href="index.html"><i class="fas fa-home"></i></a></li>  
-		<li><a href="remix.html">Remix</a></li>
-		<li><a href="glitch.html">Glitch</a></li>
-		<li><a href="video.html">Video</a></li>
-		<li><a href="processing.html">Processing</a></li>
-		<li><a href="net art.html">Net Art</a></li>    
-	</ul>
-</div>
+</div> 
 
-	<h1 id="indexheader">Hi, I'm Holly</h1>
-
-	<h2 class="colorchange">This my portflio</h2>
-
-	<!-- Just for reference 
-	a href="https://sjsu.instructure.com/cosurses/1259438/modules">Link</a>
-	<a href="page1.html">page 2</--> 
-	</body>
+</body>
 </html>
