--- a/net art2.html
+++ b/net art2.html
@@ -1,24 +1,44 @@
 <!DOCTYPE html>
 <html lang="en-US"> 
 <head>
-	<title>I'll start tomorrow</title>
-	<meta name="author" content="Holly Hancock"> 
+	<meta charset="utf-8">
+	<meta name="author" content="Holly Hancock">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>I'll start tomorrow</title>
+			<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/solid.js" integrity="sha384-+Ga2s7YBbhOD6nie0DzrZpJes+b2K1xkpKxTFFcx59QmVPaSA8c7pycsNaFwUK6l" crossorigin="anonymous"></script>
+			<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/fontawesome.js" integrity="sha384-7ox8Q2yzO/uWircfojVuCQOZl+ZZBg2D2J5nkpLqzH1HY0C1dHlTKIbpRz/LG23c" crossorigin="anonymous"></script>
+				<link rel="stylesheet" href="css/mystyle.css">
 </head>
 <body>
-	<iframe width="1000" height="500" src="https://www.youtube.com/embed/CX0Vm-Yno4Y?autoplay=1" allowfullscreen align="middle">
-		</iframe>
-	<h1>
+	<nav>
+		<ul>
+			<li><a href="index.html"><i class="fas fa-home"></i></a></li>
+			<li><a href="remix.html">Remix</a></li>
+			<li><a href="glitch.html">Glitch</a></li>
+			<li><a href="video.html">Video</a></li>
+			<li><a href="processing.html">Processing</a></li>
+			<li><a class="active" href="net art.html">Net Art</a></li> 
+		</ul>
+</nav>
+<br>	 
+	<iframe width="800" height="500" 
+	src="https://www.youtube.com/embed/CX0Vm-Yno4Y?loop=1controls=0autoplay=1">
+		
+	</iframe>
+
+	<h1 class="netart2button">
 	 
 		<button onclick="myFunction()">Procrastinate</button">
-		<form action="net art4.html" method="get">
-			<button type="submit" formtarget="_self">Procrastinate</button></form>
-		<button onclick="myFunction3()">Procrastinate</button"> 
+				<form action="net art4.html" method="get">
+			<button type="submit" formtarget="_self">Procrastinate</button>
+				</form>
+		<button onclick="myFunction2()">Procrastinate</button"> 
 
 <script>
 function myFunction() {
     alert("Have you started yet?");
 }
-function myFunction3() {
+function myFunction2() {
 	alert("When will you start?");
 }
 
