--- a/net art3.html
+++ b/net art3.html
@@ -1,19 +1,50 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-	<title>lol hello no sleep</title>
-	<meta name="author" content="Holly Hancock"> 
+	<meta charset="utf-8">
+	<meta name="author" content="Holly Hancock">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>lol hello no sleep</title> 
+			<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/solid.js" integrity="sha384-+Ga2s7YBbhOD6nie0DzrZpJes+b2K1xkpKxTFFcx59QmVPaSA8c7pycsNaFwUK6l" crossorigin="anonymous"></script>
+			<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/fontawesome.js" integrity="sha384-7ox8Q2yzO/uWircfojVuCQOZl+ZZBg2D2J5nkpLqzH1HY0C1dHlTKIbpRz/LG23c" crossorigin="anonymous"></script>
+			<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/p5.min.js"></script>
+    		<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/addons/p5.dom.min.js"></script>
+    		<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/addons/p5.sound.min.js"></script>
+    			<link rel="stylesheet" href="css/mystyle.css">
 </head>
-<body>
-	<img src="images/canvas-schedule(3times).gif">
-
+<body> 
+	<nav>
+		<ul>
+			<li><a href="index.html"><i class="fas fa-home"></i></a></li>
+			<li><a href="remix.html">Remix</a></li>
+			<li><a href="glitch.html">Glitch</a></li>
+			<li><a href="video.html">Video</a></li>
+			<li><a href="processing.html">Processing</a></li>
+			<li><a class="active" href="net art.html">Net Art</a></li> 
+		</ul>
+</nav>
+<br>
 	<h1>
+		<img class="netartpg1" sr="canvas-schedule3times.gif" ></img>
+	</h1>
+<br>
+	<h2>	
+	<script class="sketch" src="js/sketch8.js" ></script> 
+	</h2>
+<br>
 
-<p>Don't forget to submit the artist statemet!</p>
+	<h3>Don't forget to submit the artist statemet!</h3>
+		<p>
 	<input type="file" id="myFile">
 <form action="net art.html" method="get">
 			<button type="submit" formtarget="_self">Submit artist statement</button></form>
-	</h1>
+	</p>
+</div> 
+	
+	
+
+ 
+
 
 
 
