--- a/video.html
+++ b/video.html
@@ -4,28 +4,43 @@
 	<meta charset="utf-8">
 	<meta name="author" content="Holly Hancock">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="css/mystyle.css">
-	<title>Video</title>
-	<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/solid.js" integrity="sha384-+Ga2s7YBbhOD6nie0DzrZpJes+b2K1xkpKxTFFcx59QmVPaSA8c7pycsNaFwUK6l" crossorigin="anonymous"></script>
-		<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/fontawesome.js" integrity="sha384-7ox8Q2yzO/uWircfojVuCQOZl+ZZBg2D2J5nkpLqzH1HY0C1dHlTKIbpRz/LG23c" crossorigin="anonymous"></script>
+		<title>Video</title>
+			<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/solid.js" integrity="sha384-+Ga2s7YBbhOD6nie0DzrZpJes+b2K1xkpKxTFFcx59QmVPaSA8c7pycsNaFwUK6l" crossorigin="anonymous"></script>
+			<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/fontawesome.js" integrity="sha384-7ox8Q2yzO/uWircfojVuCQOZl+ZZBg2D2J5nkpLqzH1HY0C1dHlTKIbpRz/LG23c" crossorigin="anonymous"></script>
+				<link rel="stylesheet" href="css/mystyle.css">
 	
 </head>
 <body>
+	<nav>
+		<ul>
+			<li><a href="index.html"><i class="fas fa-home"></i>
+			<li><a href="remix.html">Remix</a></li>
+			<li><a href="glitch.html">Glitch</a></li>
+			<li><a class="active" href="video.html">Video</a></li>
+			<li><a href="processing.html">Processing</a></li>
+			<li><a href="net art.html">Net Art</a></li>   
+		</ul>
+</nav>
 	
-	<div>
-	<ul>
-		<li><a href="index.html"><i class="fas fa-home"></i>
-		<li><a href="remix.html">Remix</a></li>
-		<li><a href="glitch.html">Glitch</a></li>
-		<li><a class="active" href="video.html">Video</a></li>
-		<li><a href="processing.html">Processing</a></li>
-		<li><a href="net art.html">Net Art</a></li>   
-	</ul>
-	</div>
+	<div id="main">
+		<h1 id="maintitle">Video</h1>
+<br>
+	<iframe class="vimeoVideo" src="https://player.vimeo.com/video/258787860" style="max-height: 100% max-width: 100%"frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+	
+	<h2 class="statementTitle">Artist Statement</h2>
+		<p class="statementDescription">	
+		There are periods where we don't see or talk to each other and when we do have the time it's not very long. I cherish every moment whenever we spend more than one day with each other. We're close yet so far.
+	</p>
+<br>
+		<h3 class="statementTitle">Process and Aesthetic Approach</h3>
+	<p class="statementDescription">
+			My original concept completely changed last second to expressing the societal standard of education, rendering students to become busier and busier. The struggle to balance a work, play, social life has become seemingly more difficult, impacting friendships and relationships. The audio is a ukulele cover of the song Unconditionally by Katy Perry and the audio of the clock ticking was recorded separate directly from the actual clock with Adobe Audition. I recorded the ukulele with the software GarageBand, tweaked a little bit of the digital presets for enhancement, not too much though because I want to keep the classic ukulele sound, then I exported it as a wav file. The song Unconditionally was personal choice to play as it reflects my interpretation of the word unconditional and represents meaning to a fairly recent major life event. Next I imported the ukulele and clock wav files into an Adobe Audition multitrack. After adjusting the clock audio I exported both files as one wav file and imported it into Adobe Premiere Pro. From there I edited the video files to blend in the audio. My visual approach for this video was to portray a third person point of view for the most part, since I'm also a major part of the video. Even though there were many shots I wanted to shoot handheld, most of the shots were mounted on a tripod. I also attempted to limit the beginning shots to be more noisy/dark and the second half of shots to be brighter, in order to emphasize my feelings.  
+	</p>
 
-	<h1>Video</h1>
-	
-	<iframe src="https://player.vimeo.com/video/258787860" style="max-height: 100%" "max-width: 100%" width="600" height="800" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-	
+	<div id="footer">
+		&copy; Copyright 2018, Holly Hancock
+	</div>
+</div>	
+
 </body>
 </html>
