--- a/glitch.html
+++ b/glitch.html
@@ -4,41 +4,52 @@
 	<meta charset="utf-8">
 	<meta name="author" content="Holly Hancock">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="css/mystyle.css">
-	<title>Glitch</title>
-	<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/solid.js" integrity="sha384-+Ga2s7YBbhOD6nie0DzrZpJes+b2K1xkpKxTFFcx59QmVPaSA8c7pycsNaFwUK6l" crossorigin="anonymous"></script>
-	<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/fontawesome.js" integrity="sha384-7ox8Q2yzO/uWircfojVuCQOZl+ZZBg2D2J5nkpLqzH1HY0C1dHlTKIbpRz/LG23c" crossorigin="anonymous"></script>
+		<title>Glitch</title>
+			<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/solid.js" integrity="sha384-+Ga2s7YBbhOD6nie0DzrZpJes+b2K1xkpKxTFFcx59QmVPaSA8c7pycsNaFwUK6l" crossorigin="anonymous"></script>
+			<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/fontawesome.js" integrity="sha384-7ox8Q2yzO/uWircfojVuCQOZl+ZZBg2D2J5nkpLqzH1HY0C1dHlTKIbpRz/LG23c" crossorigin="anonymous"></script>
+				<link rel="stylesheet" href="css/mystyle.css">
 	
 </head>
 <body> 
- 
- <div>
-	<ul>
-		<li><a href="index.html"><i class="fas fa-home"></i>
-		<li><a href="remix.html">Remix</a></li>
-		<li><a class="active" href="glitch.html">Glitch</a></li>
-		<li><a href="video.html">Video</a></li>
-		<li><a href="processing.html">Processing</a></li>
-		<li><a href="net art.html">Net Art</a></li>  
-	</ul>
-	 </div>
+ 	<nav>
+		<ul>
+			<li><a href="index.html"><i class="fas fa-home"></i>
+			<li><a href="remix.html">Remix</a></li>
+			<li><a class="active" href="glitch.html">Glitch</a></li>
+			<li><a href="video.html">Video</a></li>
+			<li><a href="processing.html">Processing</a></li>
+			<li><a href="net art.html">Net Art</a></li>  
+		</ul>
+</nav>
 	 
-	<h1>Glitch</h1> 
-
-	<img class="center" src="media/glitch.gif" alt="glitch gif" style="max-width:100%;"> 
-
-	<p>This some description about my work.</p>
-
-	<h2>asdads</h2>
-
-	<img class="center" src="images/glitch.jpg" style="max-width:100%;">
-	<img class="center" src="images/glitch2.jpg" style="max-width:100%;">
-	<img class="center" src="images/glitch3.jpg" style="max-width:100%;">
-	<img class="center" src="images/glitch4.jpg" style="max-width:100%;"> 
+	 <div id="main">
+		<h1 id="maintitle">Glitch</h1> 
+<br>
+	<img class="glitchimages" src="media/glitch.gif" alt="glitch gif"> 
+<br>
+		<h2 class="statementTitle">Artist Statement</h2>
+			<p class="statementDescription">	
+		The art of digital media enables anyone to be able to create practically anything. Whether or not it’s intentional as an art, the art of coding lies within its purpose and function. 
+	</p>
+		<h3 class="statementTitle">Process and Aesthetic Approach</h3>
+			<p class="statementDescription">
+				The process of making the glitched images starts with the orginal image, the image file is then converted into a bmp file. Opening the bmp file within any text editing program will open the coding of the image. Next modify any small portion of the code, either by adding text or deleting text, and then open the image file to see the results. Modification results are practially uncontrollable, so this form of digital media has endless possibilities.
+			</p>
+<br>
+	<h4 class="gltichimages">Orginal Image</h4>
+		<img class="glitchimages" src="images/glitch.jpg"> 
+		<br>
+			<h5 class="glitchimages">Glitched Images</h5>
+		<img class="glitchimages" src="images/glitch2.jpg" >
+		<br>
+		<img class="glitchimages" src="images/glitch3.jpg">
 	
-	<h3>asdf</h3
-	
-	<img src="/images/glitch2.jpg" alt="glitch image 2" style="max-width:100%;">
-	
+	</p>
+
+	<div id="footer">
+		All Images &copy; Copyright 2018, Holly Hancock
+	</div>
+</div>	
+
 </body>
 </html>
