--- a/processing.html
+++ b/processing.html
@@ -4,33 +4,46 @@
 	<meta charset="utf-8">
 	<meta name="author" content="Holly Hancock"> 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="css/mystyle.css"> 
-	<title>Processing</title>
-	<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/solid.js" integrity="sha384-+Ga2s7YBbhOD6nie0DzrZpJes+b2K1xkpKxTFFcx59QmVPaSA8c7pycsNaFwUK6l" crossorigin="anonymous"></script>
-	<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/fontawesome.js" integrity="sha384-7ox8Q2yzO/uWircfojVuCQOZl+ZZBg2D2J5nkpLqzH1HY0C1dHlTKIbpRz/LG23c" crossorigin="anonymous"></script>
+		<title>Processing</title>
+			<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/solid.js" integrity="sha384-+Ga2s7YBbhOD6nie0DzrZpJes+b2K1xkpKxTFFcx59QmVPaSA8c7pycsNaFwUK6l" crossorigin="anonymous"></script>
+			<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/fontawesome.js" integrity="sha384-7ox8Q2yzO/uWircfojVuCQOZl+ZZBg2D2J5nkpLqzH1HY0C1dHlTKIbpRz/LG23c" crossorigin="anonymous"></script>
 
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/p5.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/addons/p5.dom.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/addons/p5.sound.min.js"></script>
-    <link rel="stylesheet" type="css" href="css/mystyle.css">
-    <meta charset="utf-8" />
+				<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/p5.min.js"></script>
+    			<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/addons/p5.dom.min.js"></script>
+    			<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/addons/p5.sound.min.js"></script>
+    				<link rel="stylesheet" href="css/mystyle.css"> 
 
 </head>
 <body>
-	<script src="js/sketch8.js"></script>
-	
-	<div>
-	<ul>
-		<li><a href="index.html"><i class="fas fa-home"></i></a></li>
+	<nav>
+		<ul>
+			<li><a href="index.html"><i class="fas fa-home"></i></a></li>
 		<li><a href="remix.html">Remix</a></li>  
 		<li><a href="glitch.html">Glitch</a></li>
 		<li><a href="video.html">Video</a></li>
 		<li><a class="active" href="processingindex.html">Processing</a></li>
 		<li><a href="net art.html">Net Art</a></li>  
 	</ul>
-	</div>
+	</nav>
+<div id="main">
+	<h1 id="maintitle">Processing</h1>
+<br>
+	<img class="processingPortrait" src="images/processingportrait.jpg" >
 
-	<h1>Processing</h1>
+	<h2 class="statementTitle">Self Portrait</h2>
+		<p class="statementDescription">
+		This exercise was a basic start into introducting java script by using the program Processing. The Process into creating various shapes into a self portrait was difficult for me (as you can see). First the initial canvas size is set in Processing and then the image size in photoshop. Next by using the rectangle tool to click and drag a general position and shape of the reference image. Given the infomation the x, y, height, and width coordinates are inputed into processing to create the drawn shape that's mapped in the same area. 
+	</p>
+<br>
+	<iframe class="conditionalVideo" src="media/conditionalstatement.mp4" frameborder="0" ></iframe>
+<br>
+	<h3 class="statementTitle">Conditional Statement</h3>
+		<p class="statementDescription">
+			This exercise implemented the use of conditional statements as well as a mouse feature within our Processing code. As a basic starting point, the assignment was to modify the provided example of a bouncing ball sketch. Conditional statements include "if" and "else" statements. A mouse feature can include mouseX ,mouseY, or mousePressed to add interactivity within your sketch. My sketch invovled mouseX and mouseY in order to give the function of the ellipse to follow your cursor live.   
+		</p>
+	
+			
 
+</div>
 </body>
 </html>
