--- a/remix.html
+++ b/remix.html
@@ -4,33 +4,42 @@
 	<meta charset="utf-8">
 	<meta name="author" content="Holly Hancock">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="css/mystyle.css">
-	<title>Remix</title>
-	<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/solid.js" integrity="sha384-+Ga2s7YBbhOD6nie0DzrZpJes+b2K1xkpKxTFFcx59QmVPaSA8c7pycsNaFwUK6l" crossorigin="anonymous"></script>
-<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/fontawesome.js" integrity="sha384-7ox8Q2yzO/uWircfojVuCQOZl+ZZBg2D2J5nkpLqzH1HY0C1dHlTKIbpRz/LG23c" crossorigin="anonymous"></script>
+		<title>Remix</title>
+			<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/solid.js" integrity="sha384-+Ga2s7YBbhOD6nie0DzrZpJes+b2K1xkpKxTFFcx59QmVPaSA8c7pycsNaFwUK6l" crossorigin="anonymous"></script>
+			<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/fontawesome.js" integrity="sha384-7ox8Q2yzO/uWircfojVuCQOZl+ZZBg2D2J5nkpLqzH1HY0C1dHlTKIbpRz/LG23c" crossorigin="anonymous"></script>
+				<link rel="stylesheet" href="css/mystyle.css">
  
 </head>
 <body>
-	<div>
-	<ul>
-		<li><a href="index.html"><i class="fas fa-home"></i></a></li>
-		<li><a class="active" href="remix.html">Remix</a></li>
-		<li><a href="glitch.html">Glitch</a></li>
-		<li><a href="video.html">Video</a></li>
-		<li><a href="processing.html">Processing</a></li>
-		<li><a href="net art.html">Net Art</a></li>  
-	</ul>
+	<nav>
+		<ul>
+			<li><a href="index.html"><i class="fas fa-home"></i></a></li>
+			<li><a class="active" href="remix.html">Remix</a></li>
+			<li><a href="glitch.html">Glitch</a></li>
+			<li><a href="video.html">Video</a></li>
+			<li><a href="processing.html">Processing</a></li>
+			<li><a href="net art.html">Net Art</a></li>  
+		</ul>
+</nav>
+
+	<div id="main">
+		<h1 id="maintitle">Remix</h1>
+<br>
+		<img src="images/remix.jpg" alt="remix image" class="remiximage">
+<br>
+		<h2 class="statementTitle">Artist Statement</h2>
+			<p class="statementDescription"> Most of us are aware of how addicting our phones are, yet we still continue to disconnect the world around us. Sometimes we trap our selfs in a current till we're swept away.
+			</p>
+<br>
+			<h3 class="statementTitle">Process and Aesthetic Approach</h3>
+	<p class="statementDescription">
+		I wanted to focus on the concept of how many of us know how phones have shaped society today. Despite the risk of personal privacy we continue to depend on them on the daily. The image is comprised of 3 separate stock images from Pexels, that is then imported into Photoshop. By adding masked layers and using the brush tool the photos can seamlessly be stitched together. The layers are then merged together as one layer. Finally the file is exported as web legacy. 
+	</p>
+
+	<div id="footer">
+		All Images &copy; Copyright 2018, Holly Hancock
 	</div>
-	
-	<h1>Remix</h1>
-
-	<p>
-		<img src="images/remix.jpg" alt="remix image" class="remiximage"> 
-	</p>
-
-	<p class="remixdescription">
-		Most of us are aware of how addicting our phones are, yet we still continue to disconnect the world around us. Sometimes we trap our selfs in a current till we're swept away.
-	</p>
+</div>
 
 </body>
 </html>
