--- a/glitch.html
+++ b/glitch.html
@@ -33,10 +33,10 @@
 	</p>
 		<h3 class="statementTitle">Process and Aesthetic Approach</h3>
 			<p class="statementDescription">
-				The process of making the glitched images starts with the orginal image, the image file is then converted into a bmp file. Opening the bmp file within any text editing program will open the coding of the image. Next modify any small portion of the code, either by adding text or deleting text, and then open the image file to see the results. Modification results are practially uncontrollable, so this form of digital media has endless possibilities.
+				The process of making the glitched images starts with the original image, the image file is then converted into a bmp file. Opening the bmp file within any text editing program will open the coding of the image. Next modify any small portion of the code, either by adding text or deleting text, and then open the image file to see the results. Modification results are practially uncontrollable, so this form of digital media has endless possibilities. The glitched images are then created into an animated GIF using photoshop. 
 			</p>
 <br>
-	<h4 class="gltichimages">Orginal Image</h4>
+	<h4 class="gltichimages">Original Image</h4>
 		<img class="glitchimages" src="images/glitch.jpg"> 
 		<br>
 			<h5 class="glitchimages">Glitched Images</h5>
