lol misspelled something

--- a/net art3.html
+++ b/net art3.html
@@ -33,7 +33,7 @@
 	</h2>
 <br>
 
-	<h3>Don't forget to submit the artist statemet!</h3>
+	<h3>Don't forget to submit the artist statement!</h3>
 		<p>
 	<input type="file" id="myFile">
 <form action="net art.html" method="get">
