--- a/net art2.html
+++ b/net art2.html
@@ -39,7 +39,7 @@ function myFunction() {
     alert("Have you started yet?");
 }
 function myFunction2() {
-	alert("When will you start?");
+	alert("You still haven't started, you mad bro?");
 }
 
 </script>
