--- a/net art3.html
+++ b/net art3.html
@@ -31,9 +31,12 @@
 	<h2>	
 	<script class="sketch" src="js/sketch8.js" ></script> 
 	</h2>
+		<p class="statementDescription">
+			move the mouse around the canvas and hold down the mouse to change colors
+		</p>
 <br>
 
-	<h3>Don't forget to submit the artist statement!</h3>
+	<h3>While you're at it don't forget to submit the artist statement!</h3>
 		<p>
 	<input type="file" id="myFile">
 <form action="net art.html" method="get">
