--- a/net art2.html
+++ b/net art2.html
@@ -20,11 +20,15 @@
 			<li><a class="active" href="net art.html">Net Art</a></li> 
 		</ul>
 </nav>
-<br>	 
+<br>
+
 	<iframe width="800" height="500" 
 	src="https://www.youtube.com/embed/CX0Vm-Yno4Y?loop=1controls=0autoplay=1">
 		
 	</iframe>
+		<p class="statementDescription">
+			I should really start working now.....wait omg I love this episode
+		</p>
 
 	<h1 class="netart2button">
 	 
